[gd_scene format=3 uid="uid://sgw3fuxtc582"]

[ext_resource type="Script" uid="uid://b62axs1cohnn6" path="res://addons/renegade_controller/demo/demo_scene.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b3uw4wuhb7dx7" path="res://addons/renegade_controller/presets/player.tscn" id="2"]
[ext_resource type="Script" uid="uid://cwcuj7ddeg6ck" path="res://addons/chronos/chronos.gd" id="2_0c8yo"]
[ext_resource type="Texture2D" uid="uid://d4ncyx8m7c2tc" path="res://addons/renegade_controller/textures/dark/texture_02.png" id="2_8y21c"]
[ext_resource type="Texture2D" uid="uid://bgvsnqccjra7a" path="res://addons/renegade_controller/textures/dark/texture_06.png" id="2_ms7ms"]
[ext_resource type="PackedScene" uid="uid://cpo2fvv3xhi2y" path="res://addons/renegade_controller/presets/camera_system.tscn" id="3"]
[ext_resource type="Script" uid="uid://cm5kxrnpxcdnn" path="res://addons/chronos/weather_preset.gd" id="3_xcchm"]
[ext_resource type="PackedScene" uid="uid://cv4rr32ktg54f" path="res://addons/renegade_controller/presets/side_scroller_zone.tscn" id="4"]
[ext_resource type="PackedScene" path="res://addons/renegade_controller/presets/top_down_zone.tscn" id="5"]
[ext_resource type="PackedScene" path="res://addons/renegade_controller/presets/first_person_zone.tscn" id="6"]
[ext_resource type="PackedScene" path="res://addons/renegade_controller/presets/npc.tscn" id="7"]
[ext_resource type="Script" uid="uid://df4pcmicyts02" path="res://addons/renegade_controller/demo/demo_interactable.gd" id="8"]
[ext_resource type="Script" uid="uid://c26s0tyrrfy1t" path="res://addons/renegade_controller/demo/npc_patrol.gd" id="9"]
[ext_resource type="PackedScene" uid="uid://gf2468sxbsh3" path="res://addons/renegade_controller/presets/world_pickup.tscn" id="11"]
[ext_resource type="Resource" path="res://addons/renegade_controller/presets/items/pistol.tres" id="12"]
[ext_resource type="Resource" uid="uid://csbyhpf0pviyj" path="res://addons/renegade_controller/presets/items/shotgun.tres" id="13"]
[ext_resource type="Resource" path="res://addons/renegade_controller/presets/items/medkit.tres" id="14"]
[ext_resource type="Resource" path="res://addons/renegade_controller/presets/items/kevlar_vest.tres" id="15"]
[ext_resource type="Resource" path="res://addons/renegade_controller/presets/items/security_keycard.tres" id="16"]
[ext_resource type="PackedScene" uid="uid://c8xqm7v3k2nhp" path="res://addons/modular_hud/examples/game_hud.tscn" id="21_cqtiy"]
[ext_resource type="Shader" uid="uid://dccqiutbxhyal" path="res://addons/pixel_upscale/src/pixel_upscale.gdshader" id="23_upscale"]
[ext_resource type="Script" uid="uid://bmbdn0pxo661h" path="res://addons/pixel_upscale/src/pixel_upscale_material.gd" id="24_upscale_script"]
[ext_resource type="PackedScene" path="res://addons/dithering/presets/dithering_overlay.tscn" id="25_5yu0b"]
[ext_resource type="Script" uid="uid://bs8gc0w44v0ds" path="res://addons/dithering/src/world_label.gd" id="25_worldlabel"]
[ext_resource type="Texture2D" uid="uid://bjmj1ko4h8hgp" path="res://addons/dither_shader/assets/patterns/bayer2tile16.png" id="26_57hkg"]
[ext_resource type="Script" uid="uid://dovt6df6nclb2" path="res://addons/dither_shader/src/scene_buffers.gd" id="26_buffers"]
[ext_resource type="Texture2D" uid="uid://c0o8nbhvetn4h" path="res://addons/dither_shader/assets/palettes/palette_mono.png" id="27_xywv1"]
[ext_resource type="PackedScene" uid="uid://cu8hdyktqsgo3" path="res://dump/trees/palm/tree_coconut_palm.tscn" id="29_5yu0b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8xg2k"]
shader = ExtResource("23_upscale")
shader_parameter/sharpness = 1.0

[sub_resource type="Curve" id="Curve_nufa0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Resource" id="Resource_cqtiy"]
script = ExtResource("3_xcchm")
metadata/_custom_type_script = "uid://cm5kxrnpxcdnn"

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xcchm"]
sky_top_color = Color(0.3, 0.455, 0.765, 1)
sky_horizon_color = Color(0.835, 0.71000004, 0.7025, 1)
sky_energy_multiplier = 0.91
ground_bottom_color = Color(0.35500002, 0.305, 0.255, 1)
ground_horizon_color = Color(0.58449996, 0.497, 0.49174997, 0.7)
sun_angle_max = 1.0

[sub_resource type="Sky" id="Sky_cqtiy"]
sky_material = SubResource("ProceduralSkyMaterial_xcchm")

[sub_resource type="Environment" id="Environment_rrlp6"]
background_mode = 2
sky = SubResource("Sky_cqtiy")
ambient_light_source = 3
ambient_light_color = Color(0.9175, 0.855, 0.85125, 1)
ambient_light_energy = 0.73
reflected_light_source = 2
tonemap_mode = 2
fog_light_color = Color(0.7, 0.7, 0.75, 1)
fog_density = 0.0
fog_aerial_perspective = 0.5

[sub_resource type="NavigationMesh" id="4"]
agent_height = 1.8
agent_radius = 0.4

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.40705585, 0.4070563, 0.40705615, 1)
albedo_texture = ExtResource("2_ms7ms")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="6"]
albedo_color = Color(0.8232552, 0.78384143, 0.7605013, 1)
albedo_texture = ExtResource("2_8y21c")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="7"]
albedo_color = Color(1, 0.45184767, 0.29403642, 1)
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="8"]
albedo_color = Color(0.8414864, 0.9208956, 0.91236275, 1)
albedo_texture = ExtResource("2_ms7ms")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="9"]
albedo_color = Color(0.60284126, 0.48391074, 0.6022696, 1)
albedo_texture = ExtResource("2_ms7ms")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="10"]
albedo_color = Color(0.7024525, 0.7030481, 0.60032374, 1)
albedo_texture = ExtResource("2_ms7ms")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="Curve" id="Curve_ms7ms"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0c8yo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_8y21c"]
size = Vector3(10, 5, 12)

[sub_resource type="BoxShape3D" id="11"]
size = Vector3(1, 0.8, 0.7)

[sub_resource type="StandardMaterial3D" id="13"]
albedo_color = Color(0.7, 0.5, 0.2, 1)
albedo_texture = ExtResource("2_ms7ms")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="12"]
size = Vector3(1, 0.8, 0.7)

[node name="DemoScene" type="Node3D" unique_id=43422542]
script = ExtResource("1")

[node name="SubViewportContainer" type="SubViewportContainer" parent="." unique_id=1329709681]
texture_filter = 2
material = SubResource("ShaderMaterial_8xg2k")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("24_upscale_script")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" unique_id=736108026]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="World3D" type="Node3D" parent="SubViewportContainer/SubViewport" unique_id=78664980]

[node name="SceneBuffers" type="Node3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=1877447980 node_paths=PackedStringArray("source_camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15851688, -0.5167327, 0.3884344)
script = ExtResource("26_buffers")
source_camera = NodePath("../CameraSystem/CameraRig/Pivot/SpringArm3D/Camera3D")
depth_curve = SubResource("Curve_nufa0")

[node name="Chronos" type="Node3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=1023465616]
script = ExtResource("2_0c8yo")
time = 8.1
time_scale = 0
weather = SubResource("Resource_cqtiy")
sun_path_rotation = -61.384
axial_tilt = 31.308999999999997

[node name="Sun" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/World3D/Chronos" unique_id=2128512171]
transform = Transform3D(-0.49824563, 0.44221604, -0.74578553, 0, 0.8601552, 0.51003194, 0.8670359, 0.25412118, -0.42856857, 0, 0, 0)
light_color = Color(0.9505, 0.878, 0.84075, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/World3D/Chronos" unique_id=328367757]
environment = SubResource("Environment_rrlp6")

[node name="NavRegion" type="NavigationRegion3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=2081890014]
navigation_mesh = SubResource("4")

[node name="Ground" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1429176654]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
use_collision = true
size = Vector3(60, 1, 60)
material = SubResource("5")

[node name="WallNorth" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1019649164]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -30)
use_collision = true
size = Vector3(60, 4, 1)
material = SubResource("6")

[node name="WallSouth" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1746034985]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 30)
use_collision = true
size = Vector3(60, 4, 1)
material = SubResource("6")

[node name="WallEast" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1334876684]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 2, 0)
use_collision = true
size = Vector3(1, 4, 60)
material = SubResource("6")

[node name="WallWest" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=2092058565]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 2, 0)
use_collision = true
size = Vector3(1, 4, 60)
material = SubResource("6")

[node name="Cover1" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=893546265]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.75, -5)
layers = 32799
use_collision = true
size = Vector3(3, 1.5, 1)
material = SubResource("7")

[node name="Cover2" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1513251526]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.75, 3)
use_collision = true
size = Vector3(1, 1.5, 4)
material = SubResource("7")

[node name="Cover3" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=969335882]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 8)
use_collision = true
size = Vector3(2, 1, 2)
material = SubResource("7")

[node name="Ramp" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=2075776255]
transform = Transform3D(1, 0, 0, 0, 0.966, 0.259, 0, -0.259, 0.966, 10, 0.8, -10)
use_collision = true
size = Vector3(4, 0.3, 6)
material = SubResource("7")

[node name="Platform" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1650752543]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -14)
use_collision = true
size = Vector3(6, 2, 4)
material = SubResource("7")

[node name="CorridorWallN" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1412086920]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1.5, -17.75)
use_collision = true
size = Vector3(16, 3, 0.5)
material = SubResource("8")

[node name="CorridorWallS" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=780594501]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1.5, -22.25)
use_collision = true
size = Vector3(16, 3, 0.5)
material = SubResource("8")

[node name="TDRoomWallW" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=27293507]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.75, 1.5, -20)
use_collision = true
size = Vector3(0.5, 3, 12)
material = SubResource("9")

[node name="TDRoomWallE" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=16038338]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.25, 1.5, -20)
use_collision = true
size = Vector3(0.5, 3, 12)
material = SubResource("9")

[node name="TDRoomWallN" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1254837215]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 1.5, -26.25)
use_collision = true
size = Vector3(11, 3, 0.5)
material = SubResource("9")

[node name="TDRoomWallS1" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1741032802]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5, 1.5, -13.75)
use_collision = true
size = Vector3(4, 3, 0.5)
material = SubResource("9")

[node name="TDRoomWallS2" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1516284732]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.5, 1.5, -13.75)
use_collision = true
size = Vector3(4, 3, 0.5)
material = SubResource("9")

[node name="FPRoomWallW" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=613314773]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.75, 1.5, 15)
use_collision = true
size = Vector3(0.5, 3, 8)
material = SubResource("10")

[node name="FPRoomWallE" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=2090042122]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.25, 1.5, 15)
use_collision = true
size = Vector3(0.5, 3, 8)
material = SubResource("10")

[node name="FPRoomWallN" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1698965043]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 1.5, 10.75)
use_collision = true
size = Vector3(8, 3, 0.5)
material = SubResource("10")

[node name="FPRoomWallS1" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1388611116]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.25, 1.5, 19.25)
use_collision = true
size = Vector3(2.5, 3, 0.5)
material = SubResource("10")

[node name="FPRoomWallS2" type="CSGBox3D" parent="SubViewportContainer/SubViewport/World3D/NavRegion" unique_id=1510068621]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.75, 1.5, 19.25)
use_collision = true
size = Vector3(2.5, 3, 0.5)
material = SubResource("10")

[node name="Player" parent="SubViewportContainer/SubViewport/World3D" unique_id=1004271132 instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 5)

[node name="CameraSystem" parent="SubViewportContainer/SubViewport/World3D" unique_id=1562357881 instance=ExtResource("3")]
walk_zoom_amount = -10.0
sprint_zoom_amount = -15.0
idle_zoom_delay = 0.0
aim_zoom_amount = -20.0
transition_speed_mult = 0.5
transition_curve_in = SubResource("Curve_ms7ms")
transition_curve_out = SubResource("Curve_0c8yo")
cursor_reenable_percent = 0.3

[node name="SideScrollerZone" parent="SubViewportContainer/SubViewport/World3D" unique_id=1865937893 instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.530831, 0, -18.832752)

[node name="ZoneShape" parent="SubViewportContainer/SubViewport/World3D/SideScrollerZone" index="0" unique_id=1910563699]
transform = Transform3D(0.72, 0, 0, 0, 0.72, 0, 0, 0, 0.72, -5.8630533, 4.384, -1.1928501)

[node name="ZoneCamera" parent="SubViewportContainer/SubViewport/World3D/SideScrollerZone/CameraRig" parent_id_path=PackedInt32Array(1865937893, 1668872784) index="0" unique_id=987521082]
transform = Transform3D(-0.0036676016, -0.14185719, 0.9898589, 0, 0.9898842, 0.14185548, -0.999986, 0.00052028295, -0.0036304593, 12.277334, 3.7128317, -1.1097927)
fov = 20.0

[node name="LookAtTarget" parent="SubViewportContainer/SubViewport/World3D/SideScrollerZone/CameraRig" parent_id_path=PackedInt32Array(1865937893, 1668872784) index="1" unique_id=328933640]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1630926, 1.4999999, -1.0531597)

[node name="TopDownZone" parent="SubViewportContainer/SubViewport/World3D" unique_id=1642621498 node_paths=PackedStringArray("zone_camera", "look_at_marker") instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -20)
collision_layer = 0
zone_priority = 1
zone_camera = NodePath("CameraRig/ZoneCamera")
camera_fov = 20.0
look_at_marker = NodePath("CameraRig/LookAtTarget")

[node name="ZoneShape" parent="SubViewportContainer/SubViewport/World3D/TopDownZone" index="0"]
shape = SubResource("BoxShape3D_8y21c")

[node name="ZoneCamera" parent="SubViewportContainer/SubViewport/World3D/TopDownZone/CameraRig" index="0"]
transform = Transform3D(-4.371139e-08, -0.6846757, 0.72884786, 0, 0.72884786, 0.6846757, -1, 2.9928124e-08, -3.1858953e-08, 17.83699, 16.755972, 0)
fov = 20.0

[node name="FirstPersonZone" parent="SubViewportContainer/SubViewport/World3D" unique_id=938536592 instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 0, 15)
collision_layer = 0
zone_priority = 2

[node name="ZoneShape" parent="SubViewportContainer/SubViewport/World3D/FirstPersonZone" index="0"]
transform = Transform3D(0.665, 0, 0, 0, 0.665, 0, 0, 0, 0.665, 0.01550293, 2.5, 0.11752319)

[node name="PatrolNPC" parent="SubViewportContainer/SubViewport/World3D" unique_id=728365141 instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.1, -5)

[node name="PatrolBehavior" type="Node" parent="SubViewportContainer/SubViewport/World3D/PatrolNPC" unique_id=1743759798]
script = ExtResource("9")

[node name="Chest" type="StaticBody3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=1794027331 groups=["interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.4, 0)
script = ExtResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/World3D/Chest" unique_id=1911511974]
shape = SubResource("11")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D/Chest" unique_id=1218561323]
material_override = SubResource("13")
mesh = SubResource("12")

[node name="WorldLabel" type="Node3D" parent="SubViewportContainer/SubViewport/World3D/Chest" unique_id=431662279]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
script = ExtResource("25_worldlabel")
text = "Chest"
font_size = 48
outline_size = 0

[node name="Pickups" type="Node3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=744942026]

[node name="Pistol" parent="SubViewportContainer/SubViewport/World3D/Pickups" unique_id=1159984920 instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, 0)
item = ExtResource("12")

[node name="Shotgun" parent="SubViewportContainer/SubViewport/World3D/Pickups" unique_id=990961750 instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, -3)
item = ExtResource("13")

[node name="Medkit" parent="SubViewportContainer/SubViewport/World3D/Pickups" unique_id=893851889 instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, 3)
item = ExtResource("14")
quantity = 2
highlight_color = Color(0, 0.92941177, 0.3254902, 1)

[node name="KevlarVest" parent="SubViewportContainer/SubViewport/World3D/Pickups" unique_id=1618478495 instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, 5)
item = ExtResource("15")

[node name="SecurityKeycard" parent="SubViewportContainer/SubViewport/World3D/Pickups" unique_id=883434535 instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5)
item = ExtResource("16")

[node name="Tests" type="Node3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=1831620052]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.484007, 0, 0.99864197)

[node name="tree_test" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=2116302554 instance=ExtResource("29_5yu0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.076814, 0.10012373, 4.379014)

[node name="tree_test2" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=824597078 instance=ExtResource("29_5yu0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.34706, 0.10012373, -18.021202)

[node name="tree_test3" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=1704671380 instance=ExtResource("29_5yu0b")]
transform = Transform3D(0.35703143, 0, 0.93409234, 0, 1, 0, -0.93409234, 0, 0.35703143, -41.34706, 0.10012373, -20.68059)

[node name="tree_test4" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=1325649737 instance=ExtResource("29_5yu0b")]
transform = Transform3D(-0.2399061, 0, -0.97079617, 0, 1, 0, 0.97079617, 0, -0.2399061, -41.34706, 0.10012373, -24.221352)

[node name="tree_test5" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=1839830194 instance=ExtResource("29_5yu0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.039448, 0.10798964, -18.022556)

[node name="tree_test6" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=1840099993 instance=ExtResource("29_5yu0b")]
transform = Transform3D(0.35703143, 0, 0.93409234, 0, 1, 0, -0.93409234, 0, 0.35703143, -31.694946, 0.10798964, -25.986443)

[node name="tree_test7" parent="SubViewportContainer/SubViewport/World3D/Tests" unique_id=246652965 instance=ExtResource("29_5yu0b")]
transform = Transform3D(-0.2399061, 0, -0.97079617, 0, 1, 0, 0.97079617, 0, -0.2399061, -22.039448, 0.10798964, -24.222706)

[node name="DitheringOverlay" parent="SubViewportContainer/SubViewport" unique_id=616906728 node_paths=PackedStringArray("source_camera") instance=ExtResource("25_5yu0b")]
screen_space_enabled = true
screen_algorithm = 2
screen_error_strength = 2.0
screen_pattern = 3
screen_dither_texture = ExtResource("26_57hkg")
screen_palette_texture = ExtResource("27_xywv1")
screen_bit_depth = 64
screen_contrast = 0.94
screen_lum_offset = -0.46
screen_blend_mode = 3
screen_mask_highlights_softness = 0.0
world_algorithm = 2
world_error_strength = 2.0
world_pattern = 3
world_dither_texture = ExtResource("26_57hkg")
world_palette_texture = ExtResource("27_xywv1")
world_bit_depth = 2
world_contrast = 2.78
world_lum_offset = 0.30000000000000004
world_dither_size = 1
world_blend_mode = 5
source_camera = NodePath("../World3D/CameraSystem/CameraRig/Pivot/SpringArm3D/Camera3D")
world_scale = 0.2
triplanar_sharpness = 6.0
moire_reduction = 1.0
pattern_filtering = false

[node name="GameHUD" parent="." unique_id=426183297 instance=ExtResource("21_cqtiy")]
font_size = 48
use_recommended_size = true

[editable path="SubViewportContainer/SubViewport/World3D/Player"]
[editable path="SubViewportContainer/SubViewport/World3D/CameraSystem"]
[editable path="SubViewportContainer/SubViewport/World3D/SideScrollerZone"]
[editable path="SubViewportContainer/SubViewport/World3D/TopDownZone"]
[editable path="SubViewportContainer/SubViewport/World3D/FirstPersonZone"]
